--- a/coffeerun/tests/index.html
+++ b/coffeerun/tests/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
      <script src="tests/test_datastore.js" charset="utf-8"></script>
-     <script src="tests/truck.js" charset="utf-8"></script>
-      <script src="tests/main.js" charset="utf-8"></script>
+     <script src="tests/test_truck.js" charset="utf-8"></script>
+      <script src="tests/test_main.js" charset="utf-8"></script>
       <script src="scripts/datastore.js" charset="utf-8"></script>
       <script src="scripts/truck.js" charset="utf-8"></script>
        <script src="scripts/main.js" charset="utf-8"></script>
