--- a/coffeerun/tests/index.html
+++ b/coffeerun/tests/index.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>coffeerun</title>
-  </head>
-  <body>
-     <script src="tests/test_datastore.js" charset="utf-8"></script>
-     <script src="tests/test_truck.js" charset="utf-8"></script>
-      <script src="tests/test_main.js" charset="utf-8"></script>
-      <script src="scripts/datastore.js" charset="utf-8"></script>
-      <script src="scripts/truck.js" charset="utf-8"></script>
-       <script src="scripts/main.js" charset="utf-8"></script>
 
+<head>
+  <meta charset="utf-8">
+  <title>coffeerun</title>
+</head>
 
-  </body>
+<body>
+  <script src="datastore.js" charset="utf-8"></script>
+  <script src="truck.js" charset="utf-8"></script>
+  <script src="main.js" charset="utf-8"></script>
+  <script src="test_datastore.js" charset="utf-8"></script>
+  <script src="test_truck.js" charset="utf-8"></script>
+</body>
+
 </html>
